# oauth-lite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
demo/: default.conf  index.html  nginx.conf  private.html
src/: args.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/error/: mod.rs
src/login/: ldap.rs  mod.rs
src/oauth/: authorization_registry.rs  client_registry.rs  endpoint.rs  mod.rs  request.rs  response.rs  session.rs  token_registry.rs  types.rs  user_grant.rs
www/: index.html
www/assets/: site.css
