[package]
name = "oauth-lite"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1"
log = "0.4"
simple_logger = "1.3"
derive_more = "0.15"
oxide-auth = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
parking_lot = "0.9"
lazy_static = "1.4"
hyper = "0.12"
url = { version = "2.1", features = ["serde"] }
ldap3 = "0.6"
cookie = "0.12"
base64 = "0.10"
sled = "0.29"
rand = "0.7"
hmac = "0.7"
sha2 = "0.8"
percent-encoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
structopt = "0.3"
